# food-bot

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  conda_env.yml  pyproject.toml
code/: bot_starter.py  mongo_connector.py  optimizer.py  parser.py  pipeline.py  telegram_handler.py  utils.py
config/: 138619108.json  420987788.json  5462644391.json  config.json
data/: dishlist.xlsx
output/: 138619108.csv  5462644391.csv
