[tool.poetry]
name = "poetry_env"
version = "0.1.0"
description = "environment needed for @vkusvill_food_bot to run"
authors = ["Iakov Grigoryev"]

[tool.poetry.dependencies]
dnspython = "~2.4.2"
numpy = "~1.26.0"
openpyxl = "~3.1.2"
pandas = "~2.1.4"
pip = "~23.3.1"
pymongo = "~3.12.0"
pyTelegramBotAPI = "~4.14.0"
python = "^3.11.6"
selenium = "~4.13.0"
webdriver-manager = "~4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"